--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,13 @@
 platform = atmelavr
 board = uno
 framework = arduino
+lib_deps = SD
+           PCM
+
 
 [platformio]
 description = hhii
+
+
+
+
